@@ -37,6 +37,9 @@ Features:
   errors now include the left hand menu, a proper page title and
   body content. Note added to doc/upgrading.txt on how to add it to
   deployed trackers. (John Rouillard)
+- issue2109308 - Allow subject of nosy messages be changed from reactor
+  Adds a subject parameter to nosymessage function. Patch initally
+  generated by Frank Niessink. Tests, adaptation by John Rouillard.
 
 Fixed:
 
